; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/tls/extr_tlsv1_server.c_tlsv1_server_set_cipher_list.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/tls/extr_tlsv1_server.c_tlsv1_server_set_cipher_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tlsv1_server = type { i64, i32* }

@TLS_CIPHER_ANON_DH_AES128_SHA = common dso_local global i64 0, align 8
@TLS_RSA_WITH_AES_256_CBC_SHA = common dso_local global i32 0, align 4
@TLS_RSA_WITH_AES_128_CBC_SHA = common dso_local global i32 0, align 4
@TLS_RSA_WITH_3DES_EDE_CBC_SHA = common dso_local global i32 0, align 4
@TLS_RSA_WITH_RC4_128_SHA = common dso_local global i32 0, align 4
@TLS_RSA_WITH_RC4_128_MD5 = common dso_local global i32 0, align 4
@TLS_DH_anon_WITH_AES_256_CBC_SHA = common dso_local global i32 0, align 4
@TLS_DH_anon_WITH_AES_128_CBC_SHA = common dso_local global i32 0, align 4
@TLS_DH_anon_WITH_3DES_EDE_CBC_SHA = common dso_local global i32 0, align 4
@TLS_DH_anon_WITH_RC4_128_MD5 = common dso_local global i32 0, align 4
@TLS_DH_anon_WITH_DES_CBC_SHA = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tlsv1_server_set_cipher_list(%struct.tlsv1_server* %0, i64* %1) #0 {
  %3 = alloca %struct.tlsv1_server*, align 8
  %4 = alloca i64*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  store %struct.tlsv1_server* %0, %struct.tlsv1_server** %3, align 8
  store i64* %1, i64** %4, align 8
  %7 = load i64*, i64** %4, align 8
  %8 = getelementptr inbounds i64, i64* %7, i64 0
  %9 = load i64, i64* %8, align 8
  %10 = load i64, i64* @TLS_CIPHER_ANON_DH_AES128_SHA, align 8
  %11 = icmp eq i64 %9, %10
  br i1 %11, label %12, label %69

12:                                               ; preds = %2
  store i64 0, i64* %5, align 8
  %13 = load %struct.tlsv1_server*, %struct.tlsv1_server** %3, align 8
  %14 = getelementptr inbounds %struct.tlsv1_server, %struct.tlsv1_server* %13, i32 0, i32 1
  %15 = load i32*, i32** %14, align 8
  store i32* %15, i32** %6, align 8
  %16 = load i32, i32* @TLS_RSA_WITH_AES_256_CBC_SHA, align 4
  %17 = load i32*, i32** %6, align 8
  %18 = load i64, i64* %5, align 8
  %19 = add i64 %18, 1
  store i64 %19, i64* %5, align 8
  %20 = getelementptr inbounds i32, i32* %17, i64 %18
  store i32 %16, i32* %20, align 4
  %21 = load i32, i32* @TLS_RSA_WITH_AES_128_CBC_SHA, align 4
  %22 = load i32*, i32** %6, align 8
  %23 = load i64, i64* %5, align 8
  %24 = add i64 %23, 1
  store i64 %24, i64* %5, align 8
  %25 = getelementptr inbounds i32, i32* %22, i64 %23
  store i32 %21, i32* %25, align 4
  %26 = load i32, i32* @TLS_RSA_WITH_3DES_EDE_CBC_SHA, align 4
  %27 = load i32*, i32** %6, align 8
  %28 = load i64, i64* %5, align 8
  %29 = add i64 %28, 1
  store i64 %29, i64* %5, align 8
  %30 = getelementptr inbounds i32, i32* %27, i64 %28
  store i32 %26, i32* %30, align 4
  %31 = load i32, i32* @TLS_RSA_WITH_RC4_128_SHA, align 4
  %32 = load i32*, i32** %6, align 8
  %33 = load i64, i64* %5, align 8
  %34 = add i64 %33, 1
  store i64 %34, i64* %5, align 8
  %35 = getelementptr inbounds i32, i32* %32, i64 %33
  store i32 %31, i32* %35, align 4
  %36 = load i32, i32* @TLS_RSA_WITH_RC4_128_MD5, align 4
  %37 = load i32*, i32** %6, align 8
  %38 = load i64, i64* %5, align 8
  %39 = add i64 %38, 1
  store i64 %39, i64* %5, align 8
  %40 = getelementptr inbounds i32, i32* %37, i64 %38
  store i32 %36, i32* %40, align 4
  %41 = load i32, i32* @TLS_DH_anon_WITH_AES_256_CBC_SHA, align 4
  %42 = load i32*, i32** %6, align 8
  %43 = load i64, i64* %5, align 8
  %44 = add i64 %43, 1
  store i64 %44, i64* %5, align 8
  %45 = getelementptr inbounds i32, i32* %42, i64 %43
  store i32 %41, i32* %45, align 4
  %46 = load i32, i32* @TLS_DH_anon_WITH_AES_128_CBC_SHA, align 4
  %47 = load i32*, i32** %6, align 8
  %48 = load i64, i64* %5, align 8
  %49 = add i64 %48, 1
  store i64 %49, i64* %5, align 8
  %50 = getelementptr inbounds i32, i32* %47, i64 %48
  store i32 %46, i32* %50, align 4
  %51 = load i32, i32* @TLS_DH_anon_WITH_3DES_EDE_CBC_SHA, align 4
  %52 = load i32*, i32** %6, align 8
  %53 = load i64, i64* %5, align 8
  %54 = add i64 %53, 1
  store i64 %54, i64* %5, align 8
  %55 = getelementptr inbounds i32, i32* %52, i64 %53
  store i32 %51, i32* %55, align 4
  %56 = load i32, i32* @TLS_DH_anon_WITH_RC4_128_MD5, align 4
  %57 = load i32*, i32** %6, align 8
  %58 = load i64, i64* %5, align 8
  %59 = add i64 %58, 1
  store i64 %59, i64* %5, align 8
  %60 = getelementptr inbounds i32, i32* %57, i64 %58
  store i32 %56, i32* %60, align 4
  %61 = load i32, i32* @TLS_DH_anon_WITH_DES_CBC_SHA, align 4
  %62 = load i32*, i32** %6, align 8
  %63 = load i64, i64* %5, align 8
  %64 = add i64 %63, 1
  store i64 %64, i64* %5, align 8
  %65 = getelementptr inbounds i32, i32* %62, i64 %63
  store i32 %61, i32* %65, align 4
  %66 = load i64, i64* %5, align 8
  %67 = load %struct.tlsv1_server*, %struct.tlsv1_server** %3, align 8
  %68 = getelementptr inbounds %struct.tlsv1_server, %struct.tlsv1_server* %67, i32 0, i32 0
  store i64 %66, i64* %68, align 8
  br label %69

69:                                               ; preds = %12, %2
  ret i32 0
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
